fixed footer view on mobile

--- a/style.css
+++ b/style.css
@@ -230,11 +230,13 @@ footer{
 }
 
 .upper-footer{
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     display: flex;
     flex-direction: row;
     gap:4rem;
 }
+
 .upper-footer ul{
     margin-top: 2rem;
     list-style-type: none;
